--- a/python_indrajala/examples/s_time_plot.ipynb
+++ b/python_indrajala/examples/s_time_plot.ipynb
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.0, 200.0, 400.0, 0.0) (10.0, 190.0, 390.0, 10.0)\n",
-      "10.0 190.0\n",
-      "48.0 136.0\n",
-      "86.0 172.0\n",
-      "124.0 154.0\n",
-      "162.0 118.0\n",
-      "200.0 136.0\n",
-      "238.0 100.0\n",
-      "276.0 118.0\n",
-      "314.0 82.0\n",
-      "352.0 28.0\n",
-      "390.0 10.0\n"
+      "(0.0, 200.0, 400.0, 0.0) (30.0, 180.0, 390.0, 30.0)\n",
+      "30.0 180.0\n",
+      "66.0 135.0\n",
+      "102.0 165.0\n",
+      "138.0 150.0\n",
+      "174.0 120.0\n",
+      "210.0 135.0\n",
+      "246.0 105.0\n",
+      "282.0 120.0\n",
+      "318.0 90.0\n",
+      "354.0 45.0\n",
+      "390.0 30.0\n"
      ]
     },
     {
@@ -38,29 +38,128 @@
       "image/svg+xml": [
        "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n",
-       "     width=\"400.0\" height=\"200.0\" viewBox=\"0 0 400 200\">\n",
+       "     width=\"400\" height=\"200\" viewBox=\"0 0 400 200\">\n",
        "<defs>\n",
        "</defs>\n",
        "<rect x=\"0.0\" y=\"0.0\" width=\"400.0\" height=\"200.0\" fill=\"white\" stroke=\"black\" />\n",
-       "<rect x=\"10.0\" y=\"10.0\" width=\"380.0\" height=\"180.0\" fill=\"white\" stroke=\"red\" />\n",
-       "<circle cx=\"10.0\" cy=\"190.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
-       "<circle cx=\"48.0\" cy=\"136.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
-       "<circle cx=\"86.0\" cy=\"172.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
-       "<circle cx=\"124.0\" cy=\"154.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
-       "<circle cx=\"162.0\" cy=\"118.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
-       "<circle cx=\"200.0\" cy=\"136.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
-       "<circle cx=\"238.0\" cy=\"100.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
-       "<circle cx=\"276.0\" cy=\"118.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
-       "<circle cx=\"314.0\" cy=\"82.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
-       "<circle cx=\"352.0\" cy=\"28.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
-       "<circle cx=\"390.0\" cy=\"10.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<rect x=\"30.0\" y=\"30.0\" width=\"360.0\" height=\"150.0\" fill=\"white\" stroke=\"gray\" stroke-width=\"0.2\" />\n",
+       "<circle cx=\"30.0\" cy=\"180.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<circle cx=\"66.0\" cy=\"135.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<path d=\"M30.0,180.0 L66.0,135.0\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<circle cx=\"102.0\" cy=\"165.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<path d=\"M66.0,135.0 L102.0,165.0\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<circle cx=\"138.0\" cy=\"150.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<path d=\"M102.0,165.0 L138.0,150.0\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<circle cx=\"174.0\" cy=\"120.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<path d=\"M138.0,150.0 L174.0,120.0\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<circle cx=\"210.0\" cy=\"135.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<path d=\"M174.0,120.0 L210.0,135.0\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<circle cx=\"246.0\" cy=\"105.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<path d=\"M210.0,135.0 L246.0,105.0\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<circle cx=\"282.0\" cy=\"120.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<path d=\"M246.0,105.0 L282.0,120.0\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<circle cx=\"318.0\" cy=\"90.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<path d=\"M282.0,120.0 L318.0,90.0\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<circle cx=\"354.0\" cy=\"45.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<path d=\"M318.0,90.0 L354.0,45.0\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<circle cx=\"390.0\" cy=\"30.0\" r=\"1\" fill=\"none\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<path d=\"M354.0,45.0 L390.0,30.0\" stroke=\"blue\" stroke-width=\"1\" />\n",
+       "<text x=\"200.0\" y=\"20.0\" font-size=\"10\" text-anchor=\"middle\" dominant-baseline=\"central\">This should be the headline</text>\n",
+       "<path d=\"M30.0,180.0 L30.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"30.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">0</text>\n",
+       "<path d=\"M30.0,180.0 L35.0,180.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"180.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">0</text>\n",
+       "<path d=\"M66.0,180.0 L66.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"66.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">1</text>\n",
+       "<path d=\"M30.0,165.0 L35.0,165.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"165.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">1</text>\n",
+       "<path d=\"M102.0,180.0 L102.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"102.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">2</text>\n",
+       "<path d=\"M30.0,150.0 L35.0,150.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"150.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">2</text>\n",
+       "<path d=\"M138.0,180.0 L138.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"138.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">3</text>\n",
+       "<path d=\"M30.0,135.0 L35.0,135.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"135.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">3</text>\n",
+       "<path d=\"M174.0,180.0 L174.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"174.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">4</text>\n",
+       "<path d=\"M30.0,120.0 L35.0,120.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"120.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">4</text>\n",
+       "<path d=\"M210.0,180.0 L210.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"210.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">5</text>\n",
+       "<path d=\"M30.0,105.0 L35.0,105.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"105.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">5</text>\n",
+       "<path d=\"M246.0,180.0 L246.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"246.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">6</text>\n",
+       "<path d=\"M30.0,90.0 L35.0,90.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"90.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">6</text>\n",
+       "<path d=\"M282.0,180.0 L282.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"282.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">7</text>\n",
+       "<path d=\"M30.0,75.0 L35.0,75.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"75.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">7</text>\n",
+       "<path d=\"M318.0,180.0 L318.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"318.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">8</text>\n",
+       "<path d=\"M30.0,60.0 L35.0,60.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"60.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">8</text>\n",
+       "<path d=\"M354.0,180.0 L354.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"354.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">9</text>\n",
+       "<path d=\"M30.0,45.0 L35.0,45.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"45.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">9</text>\n",
+       "<path d=\"M390.0,180.0 L390.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"390.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">10</text>\n",
+       "<path d=\"M30.0,30.0 L35.0,30.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"30.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">10</text>\n",
+       "<path d=\"M426.00000000000006,180.0 L426.00000000000006,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"426.00000000000006\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">11</text>\n",
+       "<path d=\"M30.0,15.0 L35.0,15.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"15.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">11</text>\n",
+       "<path d=\"M462.0,180.0 L462.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"462.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">12</text>\n",
+       "<path d=\"M30.0,0.0 L35.0,0.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"0.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">12</text>\n",
+       "<path d=\"M498.0,180.0 L498.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"498.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">13</text>\n",
+       "<path d=\"M30.0,-15.0 L35.0,-15.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"-15.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">13</text>\n",
+       "<path d=\"M534.0,180.0 L534.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"534.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">14</text>\n",
+       "<path d=\"M30.0,-30.0 L35.0,-30.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"-30.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">14</text>\n",
+       "<path d=\"M570.0,180.0 L570.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"570.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">15</text>\n",
+       "<path d=\"M30.0,-45.0 L35.0,-45.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"-45.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">15</text>\n",
+       "<path d=\"M606.0,180.0 L606.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"606.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">16</text>\n",
+       "<path d=\"M30.0,-60.0 L35.0,-60.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"-60.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">16</text>\n",
+       "<path d=\"M642.0,180.0 L642.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"642.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">17</text>\n",
+       "<path d=\"M30.0,-75.0 L35.0,-75.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"-75.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">17</text>\n",
+       "<path d=\"M678.0,180.0 L678.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"678.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">18</text>\n",
+       "<path d=\"M30.0,-90.0 L35.0,-90.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"-90.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">18</text>\n",
+       "<path d=\"M714.0,180.0 L714.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"714.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">19</text>\n",
+       "<path d=\"M30.0,-105.0 L35.0,-105.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"-105.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">19</text>\n",
+       "<path d=\"M750.0,180.0 L750.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"750.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">20</text>\n",
+       "<path d=\"M30.0,-120.0 L35.0,-120.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"-120.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">20</text>\n",
+       "<path d=\"M786.0,180.0 L786.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"786.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">21</text>\n",
+       "<path d=\"M30.0,-135.0 L35.0,-135.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
+       "<text x=\"20.0\" y=\"-135.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">21</text>\n",
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x7f465823a0d0>"
+       "<drawsvg.drawing.Drawing at 0x7f46583bb290>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +183,7 @@
     "        return TRF(self.x0, self.x1, self.xn0 + other.xn0, self.xn1 + other.xn1)\n",
     "    \n",
     "class SPlotter:\n",
-    "    def __init__(self, size, border=None, rect=None, pixel_scale=1.0):\n",
+    "    def __init__(self, size, border=None, rect=None, pixel_scale=1):\n",
     "        self.size = size\n",
     "        self.trf_xph = TRF(0, size[0], 0, size[0])\n",
     "        self.trf_yph = TRF(0, size[1], size[1], 0)\n",
@@ -109,19 +208,42 @@
     "            raise ValueError(\"x and y must have same length\")\n",
     "        if len(x) < 2:\n",
     "            raise ValueError(\"x and y must have at least 2 points\")\n",
-    "        for xi, yi in zip(x, y):\n",
+    "        for i, (xi, yi) in enumerate(zip(x, y)):\n",
     "            nx= self.trf_xplt.o2n(xi)\n",
     "            ny= self.trf_yplt.o2n(yi)\n",
     "            print(nx, ny)\n",
     "            self.canvas.append(draw.Circle(nx, ny, 1, fill=fill, stroke=stroke, stroke_width=stroke_width))\n",
+    "            if i > 0:\n",
+    "                self.canvas.append(draw.Line(nox, noy, nx, ny, stroke=stroke, stroke_width=stroke_width))\n",
+    "            nox = nx\n",
+    "            noy = ny\n",
+    "\n",
+    "    def ticks(self, intervals=11):\n",
+    "        for i in range(0, intervals):\n",
+    "            xti = self.trf_xplt.o2n(i)\n",
+    "            yt = self.trf_yplt.o2n(0)\n",
+    "            self.canvas.append(draw.Line(xti, yt, xti, yt-5, stroke='black', stroke_width=0.2))\n",
+    "            self.text(str(i), 8, xti, yt+10)\n",
+    "            xt = self.trf_xplt.o2n(0)\n",
+    "            yti = self.trf_yplt.o2n(i)\n",
+    "            self.canvas.append(draw.Line(xt, yti, xt+5, yti, stroke='black', stroke_width=0.2))\n",
+    "            self.text(str(i), 8, xt-10, yti)\n",
+    "            # self.canvas.append(draw.Line(self.trf_xplt.o2n(i), self.trf_yplt.o2n(0), self.trf_xplt.o2n(i), self.trf_yplt.o2n(0.2), stroke='black', stroke_width=0.2))\n",
+    "            # self.canvas.append(draw.Line(self.trf_xplt.o2n(0), self.trf_yplt.o2n(i), self.trf_xplt.o2n(0.2), self.trf_yplt.o2n(i), stroke='black', stroke_width=0.2))\n",
+    "\n",
+    "\n",
+    "    def text(self, text, size, x, y):\n",
+    "        self.canvas.append(draw.Text(text, size, x, y, center=True))\n",
     "\n",
     "\n",
     "\n",
-    "sp = SPlotter(size=(400,200), border=(10,10,10,10), rect=(0,0,10,10))\n",
+    "sp = SPlotter(size=(400,200), border=(30,20,10,30), rect=(0,0,10,10))\n",
     "print(sp.canvas_area, sp.plot_area)\n",
     "sp.canvas.append(draw.Rectangle(sp.canvas_area[0], sp.canvas_area[3], sp.canvas_area[2]-sp.canvas_area[0], -sp.canvas_area[3]+sp.canvas_area[1], fill='white', stroke='black'))\n",
-    "sp.canvas.append(draw.Rectangle(sp.plot_area[0], sp.plot_area[3], sp.plot_area[2]-sp.plot_area[0], -sp.plot_area[3]+sp.plot_area[1], fill='white', stroke='red'))\n",
+    "sp.canvas.append(draw.Rectangle(sp.plot_area[0], sp.plot_area[3], sp.plot_area[2]-sp.plot_area[0], -sp.plot_area[3]+sp.plot_area[1], fill='white', stroke='gray', stroke_width=0.2))\n",
     "sp.plot([0,1,2,3,4,5,6,7,8,9,10], [0,3,1,2,4,3,5,4,6,9,10], stroke='blue')\n",
+    "sp.text(\"This should be the headline\", 10, sp.trf_xph.o2n(200), sp.trf_yph.o2n(180))\n",
+    "sp.ticks(22)\n",
     "sp.canvas"
    ]
   },
