--- a/python_indrajala/examples/s_time_plot.ipynb
+++ b/python_indrajala/examples/s_time_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -66,100 +66,56 @@
        "<path d=\"M354.0,45.0 L390.0,30.0\" stroke=\"blue\" stroke-width=\"1\" />\n",
        "<text x=\"200.0\" y=\"20.0\" font-size=\"10\" text-anchor=\"middle\" dominant-baseline=\"central\">This should be the headline</text>\n",
        "<path d=\"M30.0,180.0 L30.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"30.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">0</text>\n",
+       "<text x=\"30.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">0.00</text>\n",
        "<path d=\"M30.0,180.0 L35.0,180.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"180.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">0</text>\n",
+       "<text x=\"20.0\" y=\"180.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">0.00</text>\n",
        "<path d=\"M66.0,180.0 L66.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"66.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">1</text>\n",
+       "<text x=\"66.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">1.00</text>\n",
        "<path d=\"M30.0,165.0 L35.0,165.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"165.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">1</text>\n",
+       "<text x=\"20.0\" y=\"165.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">1.00</text>\n",
        "<path d=\"M102.0,180.0 L102.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"102.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">2</text>\n",
+       "<text x=\"102.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">2.00</text>\n",
        "<path d=\"M30.0,150.0 L35.0,150.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"150.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">2</text>\n",
+       "<text x=\"20.0\" y=\"150.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">2.00</text>\n",
        "<path d=\"M138.0,180.0 L138.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"138.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">3</text>\n",
+       "<text x=\"138.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">3.00</text>\n",
        "<path d=\"M30.0,135.0 L35.0,135.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"135.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">3</text>\n",
+       "<text x=\"20.0\" y=\"135.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">3.00</text>\n",
        "<path d=\"M174.0,180.0 L174.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"174.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">4</text>\n",
+       "<text x=\"174.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">4.00</text>\n",
        "<path d=\"M30.0,120.0 L35.0,120.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"120.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">4</text>\n",
+       "<text x=\"20.0\" y=\"120.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">4.00</text>\n",
        "<path d=\"M210.0,180.0 L210.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"210.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">5</text>\n",
+       "<text x=\"210.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">5.00</text>\n",
        "<path d=\"M30.0,105.0 L35.0,105.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"105.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">5</text>\n",
+       "<text x=\"20.0\" y=\"105.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">5.00</text>\n",
        "<path d=\"M246.0,180.0 L246.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"246.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">6</text>\n",
+       "<text x=\"246.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">6.00</text>\n",
        "<path d=\"M30.0,90.0 L35.0,90.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"90.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">6</text>\n",
+       "<text x=\"20.0\" y=\"90.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">6.00</text>\n",
        "<path d=\"M282.0,180.0 L282.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"282.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">7</text>\n",
+       "<text x=\"282.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">7.00</text>\n",
        "<path d=\"M30.0,75.0 L35.0,75.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"75.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">7</text>\n",
+       "<text x=\"20.0\" y=\"75.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">7.00</text>\n",
        "<path d=\"M318.0,180.0 L318.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"318.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">8</text>\n",
+       "<text x=\"318.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">8.00</text>\n",
        "<path d=\"M30.0,60.0 L35.0,60.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"60.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">8</text>\n",
+       "<text x=\"20.0\" y=\"60.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">8.00</text>\n",
        "<path d=\"M354.0,180.0 L354.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"354.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">9</text>\n",
+       "<text x=\"354.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">9.00</text>\n",
        "<path d=\"M30.0,45.0 L35.0,45.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"45.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">9</text>\n",
+       "<text x=\"20.0\" y=\"45.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">9.00</text>\n",
        "<path d=\"M390.0,180.0 L390.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"390.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">10</text>\n",
+       "<text x=\"390.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">10.00</text>\n",
        "<path d=\"M30.0,30.0 L35.0,30.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"30.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">10</text>\n",
-       "<path d=\"M426.00000000000006,180.0 L426.00000000000006,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"426.00000000000006\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">11</text>\n",
-       "<path d=\"M30.0,15.0 L35.0,15.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"15.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">11</text>\n",
-       "<path d=\"M462.0,180.0 L462.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"462.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">12</text>\n",
-       "<path d=\"M30.0,0.0 L35.0,0.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"0.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">12</text>\n",
-       "<path d=\"M498.0,180.0 L498.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"498.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">13</text>\n",
-       "<path d=\"M30.0,-15.0 L35.0,-15.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"-15.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">13</text>\n",
-       "<path d=\"M534.0,180.0 L534.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"534.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">14</text>\n",
-       "<path d=\"M30.0,-30.0 L35.0,-30.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"-30.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">14</text>\n",
-       "<path d=\"M570.0,180.0 L570.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"570.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">15</text>\n",
-       "<path d=\"M30.0,-45.0 L35.0,-45.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"-45.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">15</text>\n",
-       "<path d=\"M606.0,180.0 L606.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"606.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">16</text>\n",
-       "<path d=\"M30.0,-60.0 L35.0,-60.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"-60.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">16</text>\n",
-       "<path d=\"M642.0,180.0 L642.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"642.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">17</text>\n",
-       "<path d=\"M30.0,-75.0 L35.0,-75.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"-75.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">17</text>\n",
-       "<path d=\"M678.0,180.0 L678.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"678.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">18</text>\n",
-       "<path d=\"M30.0,-90.0 L35.0,-90.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"-90.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">18</text>\n",
-       "<path d=\"M714.0,180.0 L714.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"714.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">19</text>\n",
-       "<path d=\"M30.0,-105.0 L35.0,-105.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"-105.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">19</text>\n",
-       "<path d=\"M750.0,180.0 L750.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"750.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">20</text>\n",
-       "<path d=\"M30.0,-120.0 L35.0,-120.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"-120.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">20</text>\n",
-       "<path d=\"M786.0,180.0 L786.0,175.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"786.0\" y=\"190.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">21</text>\n",
-       "<path d=\"M30.0,-135.0 L35.0,-135.0\" stroke=\"black\" stroke-width=\"0.2\" />\n",
-       "<text x=\"20.0\" y=\"-135.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">21</text>\n",
+       "<text x=\"20.0\" y=\"30.0\" font-size=\"8\" text-anchor=\"middle\" dominant-baseline=\"central\">10.00</text>\n",
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x7f46583bb290>"
+       "<drawsvg.drawing.Drawing at 0x119cd1c50>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,6 +143,7 @@
     "        self.size = size\n",
     "        self.trf_xph = TRF(0, size[0], 0, size[0])\n",
     "        self.trf_yph = TRF(0, size[1], size[1], 0)\n",
+    "        self.rect = rect\n",
     "\n",
     "        self.canvas = draw.Drawing(size[0], size[1], origin=(0,0))\n",
     "        self.pixel_scale = pixel_scale\n",
@@ -219,18 +176,19 @@
     "            noy = ny\n",
     "\n",
     "    def ticks(self, intervals=11):\n",
-    "        for i in range(0, intervals):\n",
-    "            xti = self.trf_xplt.o2n(i)\n",
-    "            yt = self.trf_yplt.o2n(0)\n",
+    "        for i in range(intervals):\n",
+    "            ix = (self.rect[2] - self.rect[0]) / (intervals - 1) * i + self.rect[0]\n",
+    "            xti = self.trf_xplt.o2n(ix)\n",
+    "            yt = self.trf_yplt.o2n(self.rect[1])\n",
     "            self.canvas.append(draw.Line(xti, yt, xti, yt-5, stroke='black', stroke_width=0.2))\n",
-    "            self.text(str(i), 8, xti, yt+10)\n",
-    "            xt = self.trf_xplt.o2n(0)\n",
-    "            yti = self.trf_yplt.o2n(i)\n",
+    "            lx=f\"{ix:.2f}\"\n",
+    "            self.text(lx, 8, xti, yt+10)\n",
+    "            iy = (self.rect[3] - self.rect[1]) / (intervals - 1) * i + self.rect[1]\n",
+    "            yti = self.trf_yplt.o2n(iy)\n",
+    "            xt = self.trf_xplt.o2n(self.rect[0])\n",
     "            self.canvas.append(draw.Line(xt, yti, xt+5, yti, stroke='black', stroke_width=0.2))\n",
-    "            self.text(str(i), 8, xt-10, yti)\n",
-    "            # self.canvas.append(draw.Line(self.trf_xplt.o2n(i), self.trf_yplt.o2n(0), self.trf_xplt.o2n(i), self.trf_yplt.o2n(0.2), stroke='black', stroke_width=0.2))\n",
-    "            # self.canvas.append(draw.Line(self.trf_xplt.o2n(0), self.trf_yplt.o2n(i), self.trf_xplt.o2n(0.2), self.trf_yplt.o2n(i), stroke='black', stroke_width=0.2))\n",
-    "\n",
+    "            ly=f\"{iy:.2f}\"\n",
+    "            self.text(ly, 8, xt-10, yti)\n",
     "\n",
     "    def text(self, text, size, x, y):\n",
     "        self.canvas.append(draw.Text(text, size, x, y, center=True))\n",
@@ -243,7 +201,7 @@
     "sp.canvas.append(draw.Rectangle(sp.plot_area[0], sp.plot_area[3], sp.plot_area[2]-sp.plot_area[0], -sp.plot_area[3]+sp.plot_area[1], fill='white', stroke='gray', stroke_width=0.2))\n",
     "sp.plot([0,1,2,3,4,5,6,7,8,9,10], [0,3,1,2,4,3,5,4,6,9,10], stroke='blue')\n",
     "sp.text(\"This should be the headline\", 10, sp.trf_xph.o2n(200), sp.trf_yph.o2n(180))\n",
-    "sp.ticks(22)\n",
+    "sp.ticks(11)\n",
     "sp.canvas"
    ]
   },
