ignore local python paths

--- a/python_indrajala/importers/import_geodata.ipynb
+++ b/python_indrajala/importers/import_geodata.ipynb
@@ -33,9 +33,9 @@
     "print(path)\n",
     "sys.path.append(path)\n",
     "\n",
-    "from indra_event import IndraEvent\n",
-    "from indra_client import IndraClient\n",
-    "from indra_downloader import IndraDownloader"
+    "from indra_event import IndraEvent  # type: ignore\n",
+    "from indra_client import IndraClient  # type: ignore\n",
+    "from indra_downloader import IndraDownloader  # type: ignore"
    ]
   },
   {
