--- a/examples/Measurements.ipynb
+++ b/examples/Measurements.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "c9c56ef2-6906-4625-bd38-70074f1f7289",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -27,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d3dbd49b-cdf5-42eb-9935-2da2a83bd1cb",
    "metadata": {},
    "outputs": [
@@ -47,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "af0aad11-0766-4913-95e4-4adc6bf0d32c",
    "metadata": {},
    "outputs": [],
@@ -57,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "75642a52-1a8b-4c01-a2bd-966d219a6612",
    "metadata": {},
    "outputs": [],
@@ -67,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "721a039d-7525-4634-8479-f362931ead4c",
    "metadata": {},
    "outputs": [],
@@ -77,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "3aafcf7a-718b-460d-9254-8d5e87217692",
    "metadata": {},
    "outputs": [],
@@ -87,7 +79,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
+   "id": "6a38f3b0-ba54-4708-b455-1205e37e9803",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['$event/measurement/ace_b_total/magnetic_field/earth',\n",
+       " '$event/measurement/atmospheric_radiation/climate/uni_muc',\n",
+       " '$event/measurement/cosmic_gamma_radiation/radiation/bfs_muc_neuhausen',\n",
+       " '$event/measurement/diffuse_radiation/climate/uni_muc',\n",
+       " '$event/measurement/gamma_radiation/radiation/bfs_muc_neuhausen',\n",
+       " '$event/measurement/gamma_radiation_10min_avt/radiation/home_balkon_env',\n",
+       " '$event/measurement/gamma_radiation_1min_avg/radiation/home_balkon_env',\n",
+       " '$event/measurement/geiger_radiation/radiation/home_balkon_env',\n",
+       " '$event/measurement/humidity/climate/home_balkon_env',\n",
+       " '$event/measurement/humidity/climate/home_balkon_ha',\n",
+       " '$event/measurement/humidity/climate/home_nordseite_ha',\n",
+       " '$event/measurement/humidity/climate/uni_muc',\n",
+       " '$event/measurement/illuminance/radiation/home_balkon_env',\n",
+       " '$event/measurement/local_pressure/climate/uni_muc',\n",
+       " '$event/measurement/mag_field_total/magnetic_field/home',\n",
+       " '$event/measurement/mag_field_total/magnetic_field/home_az_qmc1',\n",
+       " '$event/measurement/planetary_k_index/geomagnetic_storm/earth',\n",
+       " '$event/measurement/precipitation/climate/uni_muc',\n",
+       " '$event/measurement/pressure/climate/home_balkon_env',\n",
+       " '$event/measurement/pressure/climate/uni_muc',\n",
+       " '$event/measurement/rain/climate/home_balkon_env',\n",
+       " '$event/measurement/solar_radiation/climate/uni_muc',\n",
+       " '$event/measurement/temperature/climate/home_balkon_env',\n",
+       " '$event/measurement/temperature/climate/home_balkon_ha',\n",
+       " '$event/measurement/temperature/climate/home_nordseite_ha',\n",
+       " '$event/measurement/temperature/climate/uni_muc',\n",
+       " '$event/measurement/terrestrial_gamma_radiation/radiation/bfs_muc_neuhausen',\n",
+       " '$event/measurement/uv_index/climate/uni_muc',\n",
+       " '$event/measurement/wind_direction/climate/uni_muc',\n",
+       " '$event/measurement/wind_speed/climate/uni_muc']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dom_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "996caa34-2157-44c3-bb28-dfc7c7317903",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1665"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# await cl.delete_recs_wait(domains='$event/measurement/mag_field_total/magnetic_field/home_az_qmc1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "b1e1eda8-2967-4498-a942-d9ec7e7f9f0b",
    "metadata": {},
    "outputs": [],
@@ -339,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
