Clean up time api naming convention chaos

--- a/examples/Measurements.ipynb
+++ b/examples/Measurements.ipynb
@@ -157,7 +157,7 @@
    "source": [
     "async def plot_measurements(domain, timedelta=datetime.timedelta(hours=1)):\n",
     "    dt_start = datetime.datetime.now(datetime.timezone.utc) - timedelta\n",
-    "    data = await cl.get_wait_history(domain, start_time=IndraTime.datetime2julian(dt_start), sample_size=1000)\n",
+    "    data = await cl.get_wait_history(domain, start_time=IndraTime.datetime_to_julian(dt_start), sample_size=1000)\n",
     "    dt, y = IndraClient.get_timeseries(data)\n",
     "    plt.xticks(rotation=30, fontweight='light',  fontsize='x-small',)\n",
     "    plt.title(domain)\n",
