--- a/examples/dwd_test.ipynb
+++ b/examples/dwd_test.ipynb
@@ -137,7 +137,7 @@
     "x=[]\n",
     "y=[]\n",
     "for di in dt:\n",
-    "    lt = IndraTime.julian2datetime(di[0]).astimezone(tz=None)  # local time\n",
+    "    lt = IndraTime.julian_to_datetime(di[0]).astimezone(tz=None)  # local time\n",
     "    x.append(lt)\n",
     "    y.append(di[1])"
    ]
@@ -162,7 +162,7 @@
     "x2=[]\n",
     "y2=[]\n",
     "for di in dt2:\n",
-    "    x2.append(IndraTime.julian2datetime(di[0]).astimezone(tz=None))  # local time)\n",
+    "    x2.append(IndraTime.julian_to_datetime(di[0]).astimezone(tz=None))  # local time)\n",
     "    y2.append(di[1])"
    ]
   },
@@ -204,7 +204,7 @@
     "x3=[]\n",
     "y3=[]\n",
     "for di in dt3:\n",
-    "    x3.append(IndraTime.julian2datetime(di[0]).astimezone(tz=None))  # local time)\n",
+    "    x3.append(IndraTime.julian_to_datetime(di[0]).astimezone(tz=None))  # local time)\n",
     "    y3.append(di[1])"
    ]
   },
